--- a/FullStack/bbbb.html
+++ b/FullStack/bbbb.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="styleSheet" href="./style.css">
 </head>
-<body background="./images/book-mockup-irena.png">
+<body background="./images/book-mockup-irena.png" width=1000>
     <img id="logo" src="./images/Full-Stack-Dev.1.png "width=100  height=100 alt="image of fullstack">
     <h1>FSWD</h1>
     
